Changes : Explore page completion and scrollbar fix, new static data added

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -25,12 +25,13 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-    background-color: #000;
+    background-color: #00000000;
     /* Black background for the scrollbar track */
 }
 
 *::-webkit-scrollbar-thumb {
     background-color: #fff;
+    border-radius: 999999;
     /* White color for the scrollbar thumb */
 }
 
